- Fixing no-padding class for window wrap. - Added some fix inside character sheet window.

--- a/src/assets/scss/elements/_ng_scrollbar.scss
+++ b/src/assets/scss/elements/_ng_scrollbar.scss
@@ -50,3 +50,7 @@ ng-scrollbar.scrollbar-output {
 ng-scrollbar.through {
   --scrollbar-track-color: rgba(68, 62, 56, 0.4);
 }
+
+ng-scrollbar .ng-scroll-content{
+  height: 100%;
+}
